--- a/source/src/styles/dashcols.cp.scss
+++ b/source/src/styles/dashcols.cp.scss
@@ -1,20 +1,3 @@
-/*
-*  CP section header/branding
-*
-*/
-// #page-header {
-// 	padding-bottom: 20px;
-// }
-
-// #page-header > h1 {
-// 	display: none;
-// }
-
-// #dashCols-logo {
-// 	width: 151px;
-// 	height: 27px;
-// }
-
 .tab#tab-dashColsIndex {
 	&:before {
 		content: "home";
@@ -33,6 +16,10 @@
 		position: relative;
 		top: 1px;
 	}
+}
+
+.dashCols-layoutGroupTable {
+	margin-bottom: 20px;
 }
 
 /*
